# a2a-commons

./: .gitignore  README.md  __init__.py  pyproject.toml  setup.py
.github/workflows/: publish.yml
common/: __init__.py
examples/: simple_client.py  simple_server.py
